feat: add normalize.css

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -5,9 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../../assets/styles/main.css">
+  <link rel="stylesheet" href="../../assets/styles/global.css">
 </head>
-<body>
-
+<body class="main">
+  <div class="wrapper">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__logo">
+          <h1 class="header__title"></h1>
+          <h5 class="header__subtitle"></h5>
+        </div>
+        <nav class="menu"></nav>
+      </div>
+    </header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
+  </div>
 </body>
 </html>
