--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -1,48 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>  
-  <link rel="stylesheet" href="../../assets/styles/normalize.css">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body class="body">
-  <div class="wrapper">
-    <header class="header">
-      <div class="header__container container">
-        <div class="header__logo">
-          <h1 class="header__title">Cozy House</h1>
-          <h5 class="header__subtitle">Shelter for pets in Boston</h5>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="../../assets/styles/normalize.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body class="body">
+    <div class="wrapper">
+      <header class="header">
+        <div class="header__container container">
+          <div class="header__logo">
+            <h1 class="header__title">Cozy House</h1>
+            <h5 class="header__subtitle">Shelter for pets in Boston</h5>
+          </div>
+          <nav class="header__menu menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="" class="menu__link">About the shelter</a>
+              </li>
+              <li class="menu__item">
+                <a href="" class="menu__link">Our pets</a>
+              </li>
+              <li class="menu__item">
+                <a href="" class="menu__link">Help the shelter</a>
+              </li>
+              <li class="menu__item">
+                <a href="" class="menu__link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-        <nav class="header__menu menu">
-          <ul class="menu__list">
-            <li class="menu__item"><a href="" class="menu__link">About the shelter</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Our pets</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Help the shelter</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Contacts</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main class="main main-of-main-page">
-      <section class="start-screen">
-        <div class="start-screen__container container">
-          <div class="two-columns">
-            <div class="start-screen__content">
-              <h2 class="start-screen__title">Not only people<br> need a house</h2>
-              <div class="start-screen__description">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</div>
-              <div class="start-screen__button"><a href="" class="start-screen__btn btn">Make a friend</a></div>
-            </div>
-            <div class="start-screen__img">
-              <img src="../../assets/svg/start-screen-puppy.svg" alt="pet">
+      </header>
+      <main class="main main-of-main-page">
+        <section class="start-screen">
+          <div class="start-screen__container container">
+            <div class="two-columns">
+              <div class="start-screen__content">
+                <h2 class="start-screen__title">
+                  Not only people<br />
+                  need a house
+                </h2>
+                <div class="start-screen__description">
+                  We offer to give a chance to a little and nice puppy with an
+                  extremely wide and open heart. He or she will love you more
+                  than anybody else in the world, you will see!
+                </div>
+                <div class="start-screen__button">
+                  <a href="" class="start-screen__btn btn">Make a friend</a>
+                </div>
+              </div>
+
+              <img
+                class="start-screen__img"
+                src="../../assets/svg/start-screen-puppy.svg"
+                alt="pet"
+              />
             </div>
           </div>
-        </div>
-      </section>
-    </main>
-    <footer class="footer"></footer>
-  </div>
-</body>
+        </section>
+        <section class="about-the-shelter">
+          <div class="about-the-shelter__two-columns container">
+            <div class="about-the-shelter__img">
+              <img src="../../assets/img/about-pets.jpg" alt="pets" />
+            </div>
+            <div class="about-the-shelter__content">
+              <h2 class="about-the-shelter__title">
+                About the shelter<br> “Cozy House”
+              </h2>
+              <div class="about-the-shelter__description">
+                <p>
+                  Currently we have 121 dogs and 342 cats on our hands and
+                  statistics show that only 20% of them will find a family. The
+                  others will continue to live with us and will be waiting for a
+                  lucky chance to become dearly loved.
+                </p>
+                <p>
+                  We feed our wards with the best food and make sure that they
+                  do not get sick, feel comfortable (including psychologically)
+                  and well. We are supported by 87 volunteers and 28 employees
+                  of various skill levels. About 12% of the animals are taken by
+                  the shelter staff. Taking care of the animals, they become
+                  attached to the pets and would hardly ever leave them alone.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
