feat stylize pets and help sections

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -89,6 +89,51 @@
             </div>
           </div>
         </section>
+        <section class="pets">
+          <div class="pets__container container">
+            <h2 class="pets__title title">Our friends who<br>
+              are looking for a house</h2>
+            <div class="pets__slider">
+              <div class="pets__left-button"></div>
+              <div class="pets__items">
+                <div class="pets__item">
+                  <div class="pets__img"><img src="../../assets/img/katrine.png" alt=""></div>
+                  <div class="pets__name">Katrine</div>
+                  <div class="pets__button "><a href="" class="btn btn_transparent">Learn more</a></div>
+                </div>
+                <div class="pets__item">
+                  <div class="pets__img"><img src="../../assets/img/jennifer.png" alt=""></div>
+                  <div class="pets__name">Jennifer</div>
+                  <div class="pets__button "><a href="" class="btn btn_transparent">Learn more</a></div>
+                </div>
+                <div class="pets__item">
+                  <div class="pets__img"><img src="../../assets/img/woody.png" alt=""></div>
+                  <div class="pets__name">Woody</div>
+                  <div class="pets__button "><a href="" class="btn btn_transparent">Learn more</a></div>
+                </div>
+              </div>
+              <div class="pets__right-button"></div>
+            </div>
+            <div class="pets__main-button"><a href="" class="btn">Get to know the rest</a></div>
+          </div>
+        </section>
+        <section class="help">
+          <div class="help__container container">
+            <h2 class="help__title title">How you can help<br>
+              our shelter</h2>
+            <div class="help__list">
+              <div class="help__item"><img src="../../assets/svg/icon-pet-food.svg" alt=""class="help__img"><div class="help__description">Pet food</div></div>
+              <div class="help__item"><img src="../../assets/svg/icon-transportation.svg" alt=""class="help__img"><div class="help__description">Transportation</div></div>
+              <div class="help__item"><img src="../../assets/svg/icon-toys.svg" alt=""class="help__img"><div class="help__description">Toys</div></div>
+              <div class="help__item"><img src="../../assets/svg/icon-bowls-and-cups.svg" alt=""class="help__img"><div class="help__description">Bowls and cups</div></div>
+              <div class="help__item"><img src="../../assets/svg/icon-shampoos.svg" alt=""class="help__img"><div class="help__description">Shampoos</div></div>
+              <div class="help__item"><img src="../../assets/svg/icon-vitamins.svg" alt=""class="help__img"><div class="help__description">Vitamins</div></div>
+              <div class="help__item"><img src="../../assets/svg/icon-medicines.svg" alt=""class="help__img"><div class="help__description">Medicines</div></div>
+              <div class="help__item"><img src="../../assets/svg/icon-collars-leashes.svg" alt=""class="help__img"><div class="help__description">Collars / leashes</div></div>
+              <div class="help__item"><img src="../../assets/svg/icon-sleeping-area.svg" alt=""class="help__img"><div class="help__description">Sleeping areas</div></div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
