feat: stylize donation

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="../../assets/styles/iconsfont.css">
     <link rel="stylesheet" href="../../assets/styles/normalize.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -131,6 +132,21 @@
               <div class="help__item"><img src="../../assets/svg/icon-medicines.svg" alt=""class="help__img"><div class="help__description">Medicines</div></div>
               <div class="help__item"><img src="../../assets/svg/icon-collars-leashes.svg" alt=""class="help__img"><div class="help__description">Collars / leashes</div></div>
               <div class="help__item"><img src="../../assets/svg/icon-sleeping-area.svg" alt=""class="help__img"><div class="help__description">Sleeping areas</div></div>
+            </div>
+          </div>
+        </section>
+        <section class="donation">
+          <div class="donation__container container">
+            <div class="donation__two-columns">
+              <div class="donation__img">
+                <img src="../../assets/svg/donation-dog.svg" alt="pet" />
+              </div>
+              <div class="donation__content">
+                <h2 class="donation__title title">You can also<br> make a donation</h2>
+                <div class="donation__name-of-bank">Name of the bank / Type of bank account</div>
+                <div class="donation__card-number _icon-credit-card">8380 2880 8028 8791 7435</div>
+                <div class="donation__description">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+              </div>
             </div>
           </div>
         </section>
