feat: stylize donation and footer

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -151,7 +151,25 @@
           </div>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__container container">
+          <div class="footer__three-columns">
+            <div class="footer__column">
+              <div class="footer__column-title">For questions<br> and suggestions</div>
+              <div class="footer__first-column-item _icon-mail">email@shelter.com</div>
+              <div class="footer__second-column-item _icon-phone">+13 674 567 75 54</div>
+            </div>
+            <div class="footer__column">
+              <div class="footer__column-title">We are waiting<br> for your visit</div>
+              <div class="footer__first-column-item _icon-pin">1 Central Street, Boston<br> (entrance from the store)</div>
+              <div class="footer__second-column-item _icon-pin">18 South Park, London </div>
+            </div>
+            <div class="footer__column">
+              <img src="../../assets/svg/footer-puppy.svg" alt="pet" />
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
