--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Crazy House</title>
     <link rel="stylesheet" href="../../assets/styles/iconsfont.css">
     <link rel="stylesheet" href="../../assets/styles/normalize.css" />
     <link rel="stylesheet" href="style.css" />
@@ -23,13 +23,13 @@
                 <a href="" class="menu__link">About the shelter</a>
               </li>
               <li class="menu__item">
-                <a href="" class="menu__link">Our pets</a>
+                <a href="../pets/index.html" class="menu__link">Our pets</a>
               </li>
               <li class="menu__item">
-                <a href="" class="menu__link">Help the shelter</a>
+                <a href="#help" class="menu__link">Help the shelter</a>
               </li>
               <li class="menu__item">
-                <a href="" class="menu__link">Contacts</a>
+                <a href="#footer" class="menu__link">Contacts</a>
               </li>
             </ul>
           </nav>
@@ -50,7 +50,7 @@
                   than anybody else in the world, you will see!
                 </div>
                 <div class="start-screen__button">
-                  <a href="" class="start-screen__btn btn">Make a friend</a>
+                  <a href="#ourFriends" class="start-screen__btn btn">Make a friend</a>
                 </div>
               </div>
 
@@ -90,7 +90,7 @@
             </div>
           </div>
         </section>
-        <section class="pets">
+        <section class="pets" id="ourFriends">
           <div class="pets__container container">
             <h2 class="pets__title title">Our friends who<br>
               are looking for a house</h2>
@@ -118,7 +118,7 @@
             <div class="pets__main-button"><a href="" class="btn">Get to know the rest</a></div>
           </div>
         </section>
-        <section class="help">
+        <section class="help" id="help">
           <div class="help__container container">
             <h2 class="help__title title">How you can help<br>
               our shelter</h2>
@@ -144,25 +144,25 @@
               <div class="donation__content">
                 <h2 class="donation__title title">You can also<br> make a donation</h2>
                 <div class="donation__name-of-bank">Name of the bank / Type of bank account</div>
-                <div class="donation__card-number _icon-credit-card">8380 2880 8028 8791 7435</div>
+                <a class="donation__card-number _icon-credit-card" href="##">8380 2880 8028 8791 7435</a>
                 <div class="donation__description">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
               </div>
             </div>
           </div>
         </section>
       </main>
-      <footer class="footer">
+      <footer class="footer" id="footer">
         <div class="footer__container container">
           <div class="footer__three-columns">
             <div class="footer__column">
               <div class="footer__column-title">For questions<br> and suggestions</div>
-              <div class="footer__first-column-item _icon-mail">email@shelter.com</div>
-              <div class="footer__second-column-item _icon-phone">+13 674 567 75 54</div>
+              <a href="mailto:email@shelter.com" class="footer__first-column-item _icon-mail">email@shelter.com</a>
+              <a href="tel:+136745677554" class="footer__second-column-item _icon-phone">+13 674 567 75 54</a>
             </div>
             <div class="footer__column">
               <div class="footer__column-title">We are waiting<br> for your visit</div>
-              <div class="footer__first-column-item _icon-pin">1 Central Street, Boston<br> (entrance from the store)</div>
-              <div class="footer__second-column-item _icon-pin">18 South Park, London </div>
+              <div class="footer__first-column-item _icon-pin"><a href="https://www.google.by/maps/place/%D0%91%D0%B0%D1%80%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%87%D0%B8/@53.2245405,25.8855849,10.33z/data=!4m5!3m4!1s0x46d8cfe9b9e4eda3:0xc8878cbb5b9a36e8!8m2!3d53.132148!4d26.0166121?hl=ru">1 Central Street, Boston<br> (entrance from the store)</a></div>
+              <div class="footer__second-column-item _icon-pin"><a href="https://www.google.by/maps/place/%D0%91%D0%B0%D1%80%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%87%D0%B8/@53.2245405,25.8855849,10.33z/data=!4m5!3m4!1s0x46d8cfe9b9e4eda3:0xc8878cbb5b9a36e8!8m2!3d53.132148!4d26.0166121?hl=ru">18 South Park, London</a></div>
             </div>
             <div class="footer__column">
               <img src="../../assets/svg/footer-puppy.svg" alt="pet" />
