--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -13,14 +13,14 @@
     <div class="wrapper">
       <header class="header">
         <div class="header__container container">
-          <div class="header__logo">
+          <a href="index.html" class="header__logo">
             <h1 class="header__title">Cozy House</h1>
             <h5 class="header__subtitle">Shelter for pets in Boston</h5>
-          </div>
+          </a>
           <nav class="header__menu menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="" class="menu__link">About the shelter</a>
+                <a href="../main/index.html" class="menu__link">About the shelter</a>
               </li>
               <li class="menu__item">
                 <a href="../pets/index.html" class="menu__link">Our pets</a>
