--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -4,10 +4,56 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="">
+  <title>Crazy House</title>
+  <link rel="stylesheet" href="../../assets/styles/iconsfont.css">
+  <link rel="stylesheet" href="../../assets/styles/normalize.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  
-</body>
+<body class="body">
+  <div class="wrapper">
+    <header class="header">
+      <div class="header__container container">
+        <a href="../main/index.html" class="header__logo">
+          <h1 class="header__title">Cozy House</h1>
+          <h5 class="header__subtitle">Shelter for pets in Boston</h5>
+        </a>
+        <nav class="header__menu menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="../main/index.html" class="menu__link">About the shelter</a>
+            </li>
+            <li class="menu__item">
+              <a href="../pets/index.html" class="menu__link">Our pets</a>
+            </li>
+            <li class="menu__item">
+              <a href="../main/index.html#help" class="menu__link">Help the shelter</a>
+            </li>
+            <li class="menu__item">
+              <a href="#footer" class="menu__link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+   
+    <footer class="footer" id="footer">
+      <div class="footer__container container">
+        <div class="footer__three-columns">
+          <div class="footer__column">
+            <div class="footer__column-title">For questions<br> and suggestions</div>
+            <a href="mailto:email@shelter.com" class="footer__first-column-item _icon-mail">email@shelter.com</a>
+            <a href="tel:+136745677554" class="footer__second-column-item _icon-phone">+13 674 567 75 54</a>
+          </div>
+          <div class="footer__column">
+            <div class="footer__column-title">We are waiting<br> for your visit</div>
+            <div class="footer__first-column-item _icon-pin"><a href="https://www.google.by/maps/place/%D0%91%D0%B0%D1%80%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%87%D0%B8/@53.2245405,25.8855849,10.33z/data=!4m5!3m4!1s0x46d8cfe9b9e4eda3:0xc8878cbb5b9a36e8!8m2!3d53.132148!4d26.0166121?hl=ru">1 Central Street, Boston<br> (entrance from the store)</a></div>
+            <div class="footer__second-column-item _icon-pin"><a href="https://www.google.by/maps/place/%D0%91%D0%B0%D1%80%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%87%D0%B8/@53.2245405,25.8855849,10.33z/data=!4m5!3m4!1s0x46d8cfe9b9e4eda3:0xc8878cbb5b9a36e8!8m2!3d53.132148!4d26.0166121?hl=ru">18 South Park, London</a></div>
+          </div>
+          <div class="footer__column">
+            <img src="../../assets/svg/footer-puppy.svg" alt="pet" />
+          </div>
+        </div>
+      </div>
+    </footer>
 </html>
