feat add our-friends section

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -95,27 +95,31 @@
             <h2 class="pets__title title">Our friends who<br>
               are looking for a house</h2>
             <div class="pets__slider">
-              <div class="pets__left-button"></div>
+              <button class="pets__left-button">
+                <b>←</b>
+              </button>
               <div class="pets__items">
                 <div class="pets__item">
-                  <div class="pets__img"><img src="../../assets/img/katrine.png" alt=""></div>
+                  <div class="pets__img"><img src="../../assets/img/katrine.png" alt="katrine"></div>
                   <div class="pets__name">Katrine</div>
                   <div class="pets__button "><a href="" class="btn btn_transparent">Learn more</a></div>
                 </div>
                 <div class="pets__item">
-                  <div class="pets__img"><img src="../../assets/img/jennifer.png" alt=""></div>
+                  <div class="pets__img"><img src="../../assets/img/jennifer.png" alt="jennifer"></div>
                   <div class="pets__name">Jennifer</div>
                   <div class="pets__button "><a href="" class="btn btn_transparent">Learn more</a></div>
                 </div>
                 <div class="pets__item">
-                  <div class="pets__img"><img src="../../assets/img/woody.png" alt=""></div>
+                  <div class="pets__img"><img src="../../assets/img/woody.png" alt="woody"></div>
                   <div class="pets__name">Woody</div>
                   <div class="pets__button "><a href="" class="btn btn_transparent">Learn more</a></div>
                 </div>
               </div>
-              <div class="pets__right-button"></div>
+              <button class="pets__right-button">
+                <b>→</b>
+              </button>
             </div>
-            <div class="pets__main-button"><a href="" class="btn">Get to know the rest</a></div>
+            <div class="pets__main-button"><a href="../pets/index.html" class="btn">Get to know the rest</a></div>
           </div>
         </section>
         <section class="help" id="help">
