--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -35,7 +35,63 @@
         </nav>
       </div>
     </header>
-
+    <main class="main">
+      <section class="our-pets">
+        <div class="container our-pets__container">
+          <h2 class="our-pets__title">Our friends who<br>
+            are looking for a house</h2>
+          <div class="our-pets__items">
+            <div class="our-pets__item">
+              <div class="our-pets__img"><img src="../../assets/img/katrine.png" alt=""></div>
+              <div class="our-pets__name">Katrine</div>
+              <div class="our-pets__button"><a href="" class="btn btn_transparent">Learn more</a></div>
+            </div>
+            <div class="our-pets__item">
+              <div class="our-pets__img"><img src="../../assets/img/jennifer.png" alt="Jennifer"></div>
+              <div class="our-pets__name">Jennifer</div>
+              <div class="our-pets__button"><a href="" class="btn btn_transparent">Learn more</a></div>
+            </div>
+            <div class="our-pets__item">
+              <div class="our-pets__img"><img src="../../assets/img/woody.png" alt="Woody"></div>
+              <div class="our-pets__name">Woody</div>
+              <div class="our-pets__button"><a href="" class="btn btn_transparent">Learn more</a></div>
+            </div>
+            <div class="our-pets__item">
+              <div class="our-pets__img"><img src="../../assets/img/pets-katrine.jpg" alt="Sophia"></div>
+              <div class="our-pets__name">Sophia</div>
+              <div class="our-pets__button"><a href="" class="btn btn_transparent">Learn more</a></div>
+            </div>
+            <div class="our-pets__item">
+              <div class="our-pets__img"><img src="../../assets/img/timmy.png" alt="Timmy"></div>
+              <div class="our-pets__name">Timmy</div>
+              <div class="our-pets__button"><a href="" class="btn btn_transparent">Learn more</a></div>
+            </div>
+            <div class="our-pets__item">
+              <div class="our-pets__img"><img src="../../assets/img/charly.png" alt="Charly"></div>
+              <div class="our-pets__name">Charly</div>
+              <div class="our-pets__button"><a href="" class="btn btn_transparent">Learn more</a></div>
+            </div>
+            <div class="our-pets__item">
+              <div class="our-pets__img"><img src="../../assets/img/scarlett.png" alt="Scarlett"></div>
+              <div class="our-pets__name">Scarlett</div>
+              <div class="our-pets__button"><a href="" class="btn btn_transparent">Learn more</a></div>
+            </div>
+            <div class="our-pets__item">
+              <div class="our-pets__img"><img src="../../assets/img/freddie.png" alt="Freddie"></div>
+              <div class="our-pets__name">Freddie</div>
+              <div class="our-pets__button"><a href="" class="btn btn_transparent">Learn more</a></div>
+            </div>
+          </div>
+          <div class="our-pets__navigation">
+            <button class="round-button round-button_disabled" disabled><b>&lt&lt</b></button>
+            <button class="round-button round-button_disabled" disabled><b>&lt</b></button>
+            <button class="round-button round-button_static"><b>1</b></button>
+            <button class="round-button"><b>&gt</b></button>
+            <button class="round-button"><b>&gt&gt</b></button>
+          </div>
+        </div>
+      </section>
+    </main>
    
     <footer class="footer" id="footer">
       <div class="footer__container container">
