feat: stylize about section 767px

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -38,7 +38,7 @@
       <main class="main main-of-main-page">
         <section class="start-screen">
           <div class="start-screen__container container">
-            <div class="two-columns">
+            <div class="start-screen__two-columns">
               <div class="start-screen__content">
                 <h2 class="start-screen__title">
                   Not only people<br />
@@ -54,11 +54,13 @@
                 </div>
               </div>
 
-              <img
-                class="start-screen__img"
-                src="../../assets/svg/start-screen-puppy.svg"
-                alt="pet"
-              />
+              <div class="start-screen__img">
+                <img
+                  
+                  src="../../assets/svg/start-screen-puppy.svg"
+                  alt="pet"
+                />
+              </div>
             </div>
           </div>
         </section>
