--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -167,8 +167,8 @@
             </div>
             <div class="footer__column">
               <div class="footer__column-title">We are waiting<br> for your visit</div>
-              <div class="footer__first-column-item _icon-pin"><a href="https://www.google.by/maps/place/%D0%91%D0%B0%D1%80%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%87%D0%B8/@53.2245405,25.8855849,10.33z/data=!4m5!3m4!1s0x46d8cfe9b9e4eda3:0xc8878cbb5b9a36e8!8m2!3d53.132148!4d26.0166121?hl=ru">1 Central Street, Boston<br> (entrance from the store)</a></div>
-              <div class="footer__second-column-item _icon-pin"><a href="https://www.google.by/maps/place/%D0%91%D0%B0%D1%80%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%87%D0%B8/@53.2245405,25.8855849,10.33z/data=!4m5!3m4!1s0x46d8cfe9b9e4eda3:0xc8878cbb5b9a36e8!8m2!3d53.132148!4d26.0166121?hl=ru">18 South Park, London</a></div>
+             <a class="footer__first-column-item _icon-pin" href="https://www.google.by/maps/place/%D0%91%D0%B0%D1%80%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%87%D0%B8/@53.2245405,25.8855849,10.33z/data=!4m5!3m4!1s0x46d8cfe9b9e4eda3:0xc8878cbb5b9a36e8!8m2!3d53.132148!4d26.0166121?hl=ru">1 Central Street, Boston<br> (entrance from the store)</a>
+              <a class="footer__second-column-item _icon-pin" href="https://www.google.by/maps/place/%D0%91%D0%B0%D1%80%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%87%D0%B8/@53.2245405,25.8855849,10.33z/data=!4m5!3m4!1s0x46d8cfe9b9e4eda3:0xc8878cbb5b9a36e8!8m2!3d53.132148!4d26.0166121?hl=ru">18 South Park, London</a>
             </div>
             <div class="footer__column">
               <img src="../../assets/svg/footer-puppy.svg" alt="pet" />
