feat: add burger

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -33,6 +33,11 @@
               </li>
             </ul>
           </nav>
+          <div class="header__burger burger">
+            <span class="burger__line"></span>
+            <span class="burger__line"></span>
+            <span class="burger__line"></span>
+          </div>
         </div>
       </header>
       <main class="main main-of-main-page">
