--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="body">
+    <div class="overlay"></div>
     <div class="wrapper">
+      
       <header class="header">
         <div class="header__container container">
           <a href="index.html" class="header__logo">
@@ -20,7 +22,7 @@
           <nav class="header__menu menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="../main/index.html" class="menu__link">About the shelter</a>
+                <a href="#" class="menu__link">About the shelter</a>
               </li>
               <li class="menu__item">
                 <a href="../pets/index.html" class="menu__link">Our pets</a>
