--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="body">
-  <div class="wrapper">
+  <div class="overlay"></div>
+  <body class="wrapper">
     <header class="header">
       <div class="header__container container">
         <a href="../main/index.html" class="header__logo">
@@ -23,7 +24,7 @@
               <a href="../main/index.html" class="menu__link">About the shelter</a>
             </li>
             <li class="menu__item">
-              <a href="../pets/index.html" class="menu__link">Our pets</a>
+              <a href="#header" class="menu__link">Our pets</a>
             </li>
             <li class="menu__item">
               <a href="../main/index.html#help" class="menu__link">Help the shelter</a>
@@ -117,4 +118,6 @@
         </div>
       </div>
     </footer>
+    <script src="./script.js"></script>
+  </body>
 </html>
